# FuzzyQD_2.0

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
libint/: CMakeLists.txt  bindings.cpp  integrals_core.cpp  integrals_core.hpp
src/: fuzzy2.py  parsers.py
src/fuzzy2/: __init__.py  analysis.py  config.py  cube.py  io_utils.py  main.py  plotting.py  structure_utils.py
